--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,13 +15,16 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
+    "html2pdf.js": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "jws": "^4.0.0",
+    "pdf-lib": "^1.17.1",
     "safe-buffer": "^5.2.1",
     "v-page": "^3.0.0",
     "vee-validate": "^4.11.6",
     "vue": "^3.3.4",
     "vue-3-tailwind-css-pagination": "^0.1.5",
+    "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.13",
     "vue-tailwind": "^2.5.1",
     "vuelidate": "^0.7.7",
